Add page case win

--- a/src/locales/gb.json
+++ b/src/locales/gb.json
@@ -14,6 +14,7 @@
     "page.case.skipAnim": "Without animation",
     "page.case.openButton": "Open case",
     "page.case.inside": "What is inside this case?",
+    "page.case.playAgain": "Play again",
 
     "main.baner1.title": "A gift from MEL to you!",
     "main.baner1.text": "Don't forget to pick up your daily gifts from Mel, just click the “Pick up a gift” button and it will go to your profile!",
