--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,6 +14,7 @@
     "page.case.skipAnim": "Без анимации",
     "page.case.openButton": "Открыть кейс",
     "page.case.inside": "Что находится внутри этого кейса?",
+    "page.case.playAgain": "Играть еще раз",
 
     "main.baner1.title": "Подарок тебе от MEL!",
     "main.baner1.text": "Не забудьте забрать свои ежедневные подарки от Mel, просто нажмите кнопку “Забрать подарок”, и он перейдет в ваш профиль!",
